--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.8",
   "private": true,
   "scripts": {
-    "start": "forever app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "express": "4.*",
