--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sustc.us",
-  "version": "0.3.1",
+  "version": "0.5.1",
   "private": true,
   "scripts": {
     "start": "node app.js"
@@ -19,7 +19,7 @@
     "errorhandler": "*",
     
     "eventproxy": "*",
-    "jade": "1.5.0",
+    "jade": "*",
     "mongoose": "2.*",
     "connect-mongo": "*",
     "pagedown": "*",
