--- a/package.json
+++ b/package.json
@@ -1,42 +1,39 @@
-
 {
   "name": "sustc.us",
-  "version": "0.5.1",
+  "version": "0.6.1",
   "private": true,
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "4.*",
-    "bson": "*",
-    "express-view-cache": "*",
     "body-parser": "*",
+    "bson": "*",
+    "connect-mongo": "*",
     "connect-multiparty": "*",
     "cookie-parser": "*",
-    "express-session": "*",
-    "method-override": "*",
-    "morgan": "*",
-    "serve-static": "*",
-    "errorhandler": "*",
-    
-    "eventproxy": "*",
-    "jade": "*",
-    "mongoose": "2.*",
-    "connect-mongo": "*",
-    "pagedown": "*",
-    "validator": "0.3.7",
-    "nodemailer": "*",
-    "marked-prettyprint": "0.2.8",
-    "imagemagick": "*",
-    "underscore": "*",
     "csv": "*",
-    "xss": "0.0.5",
-    "iconv-lite": "*",
-    "tesseract_native": "*",
+    "errorhandler": "*",
+    "eventproxy": "*",
+    "express": "4.*",
+    "express-session": "*",
+    "express-view-cache": "*",
     "gm": "*",
-
+    "iconv-lite": "*",
+    "imagemagick": "*",
+    "jade": "*",
+    "marked-prettyprint": "0.2.8",
+    "method-override": "*",
+    "mongoose": "2.*",
+    "morgan": "*",
+    "nodemailer": "*",
+    "pagedown": "*",
+    "request": "*",
+    "serve-static": "*",
+    "tesseract_native": "*",
+    "underscore": "^1.8.3",
+    "validator": "0.3.7",
     "wechat": "*",
-    "request": "*"
+    "xss": "0.0.5"
   },
   "devDependencies": {
     "clean-css": "*",
