mod: SaveMethod-NewClient correct

--- a/src/config/config.example.json
+++ b/src/config/config.example.json
@@ -31,5 +31,5 @@
 
   "ENIGMA_KEY": "DSmEyhYKVO9fSq7be2gY1PglshftAM8hYwR5bMhB",
   "ENIGMA_DEFAULT_ALLOWED_LIMIT": 20E6,
-  "ENIGMA_DEFAULT_CLIENT_LIMIT": 5
+  "ENIGMA_DEFAULT_CLIENT_LIMIT": 5E0
 }
